# cask-archived

./: README.md
cask-mobile/: pubspec.yaml
cask-mobile/android/app/: build.gradle
cask-mobile/android/app/src/main/: AndroidManifest.xml
cask-mobile/android/app/src/main/kotlin/com/example/cask/: MainActivity.kt
cask-mobile/android/app/src/profile/: AndroidManifest.xml
cask-mobile/ios/Runner/: Info.plist
cask-mobile/ios/Runner.xcodeproj/: project.pbxproj
cask-mobile/linux/: CMakeLists.txt  my_application.cc
cask-mobile/macos/Runner.xcodeproj/: project.pbxproj
cask-mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
cask-mobile/macos/Runner/Configs/: AppInfo.xcconfig
cask-mobile/test/: widget_test.dart
cask-mobile/web/: index.html  manifest.json
cask-mobile/windows/: CMakeLists.txt
cask-mobile/windows/runner/: Runner.rc  main.cpp
cask-server/: .pdm.toml  Makefile  pyproject.toml
cask-server/cask/cask/: apps.py
